@@ -1,3 +1,3 @@
 AUX awesome-session 33 RMD160 68a828295285a5232603df6574fdffa2527fb183 SHA1 c30cf121e89f0fc7320b79ca3452c33ec516f38d SHA256 a76cca201d3f815658acfb54a9ff3737d263cae1f6cc3527a59b0f22aa01df1b
-EBUILD awesome-9999.ebuild 1967 RMD160 ea1ca9e8551f58a7fc81eacc89967d741acef239 SHA1 080161c2f4dd3c5d003eb45794c571910cedf8aa SHA256 b49b0c533144f8ce997b7b22761352980b25557ca10aac5b00a30e6251cd23af
-MISC ChangeLog 535 RMD160 fc9ffb5e74566629c8956e4404803435d7f0f858 SHA1 6452259e4b3390a0e54b59e7bdaa78ef080b33d9 SHA256 5d9db2c6b5d1aaab41dc2ff034ad8d7404e015a0a6cfe7f50f65e218f6077366
+EBUILD awesome-9999.ebuild 2037 RMD160 7c800e1bc7fb5509d418141587fec9de802cd071 SHA1 ad36f9432d2343c2275b2f0c891c4f75fd9d1c7f SHA256 1b61b05cc0293dcdfbd5cdf60d4b6c19479c9209fe98410285f5cb4c66261376
+MISC ChangeLog 646 RMD160 8270923ec71b2c0d9eaa8e51e931306b6b3679f1 SHA1 bbf11100bdd3a82fdc39950afd231b56f58599f6 SHA256 09e83722fea6369527edcced525956b7ee44663339fb2976fdeada8ad77eae78
