@@ -13,20 +13,20 @@ HOMEPAGE="http://awesome.naquadah.org/"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS=""
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~x86-fbsd"
 IUSE="dbus doc"
 
-RDEPEND=">=dev-lang/lua-5.1
-	>=dev-libs/glib-2
+RDEPEND=">=dev-lang/lua-5.1[deprecated]
 	dev-libs/libev
+	>=dev-libs/libxdg-basedir-1
 	dev-util/gperf
-	sys-libs/ncurses
+	media-libs/imlib2[png]
 	x11-libs/cairo[xcb]
 	x11-libs/libX11[xcb]
 	>=x11-libs/libxcb-1.1
 	>=x11-libs/pango-1.19.3
-	>=x11-libs/xcb-util-0.3
-	media-libs/imlib2
+	>=x11-libs/startup-notification-0.10
+	>=x11-libs/xcb-util-0.3.4
 	dbus? ( >=sys-apps/dbus-1 )"
 
 DEPEND="${RDEPEND}
@@ -34,15 +34,19 @@ DEPEND="${RDEPEND}
 	app-text/xmlto
 	>=dev-util/cmake-2.6
 	dev-util/pkgconfig
+	media-gfx/imagemagick
 	x11-proto/xcb-proto
-	>=x11-proto/xproto-7.0.11
-	doc? ( app-doc/doxygen
+	>=x11-proto/xproto-7.0.15
+	doc? (
+		app-doc/doxygen
 		dev-util/luadoc
-		media-gfx/graphviz )"
+		media-gfx/graphviz
+	)"
 
 RDEPEND="${RDEPEND}
 	app-shells/bash
-	|| ( x11-misc/gxmessage
+	|| (
+		x11-misc/gxmessage
 		x11-apps/xmessage
 	)
 	|| ( x11-terms/eterm
@@ -64,17 +68,16 @@ src_unpack() {
 	echo -n "`git --git-dir="${GIT_DIR}" describe`-gentoo" > ${S}/.version_stamp
 }
 
+mycmakeargs="-DPREFIX=/usr
+	-DSYSCONFDIR=/etc
+		$(cmake-utils_use_with dbus DBUS)
+		$(cmake-utils_use doc GENERATE_LUADOC)"
+
 src_compile() {
 	local myargs="all"
 
-	mycmakeargs="${mycmakeargs}
-		$(cmake-utils_use_with dbus DBUS)"
-
 	if use doc ; then
-		mycmakeargs="${mycmakeargs} -DGENERATE_LUADOC=ON"
 		myargs="${myargs} doc"
-	else
-		mycmakeargs="${mycmakeargs} -DGENERATE_LUADOC=OFF"
 	fi
 	cmake-utils_src_compile ${myargs}
 }
@@ -84,10 +87,11 @@ src_install() {
 
 	if use doc ; then
 		(
-			cd "${WORKDIR}"/${PN}_build/doc/html/ && dohtml -r * || die
-			mv "${D}"/usr/share/doc/${PN}/luadoc "${D}"/usr/share/doc/${PF}/html/luadoc || die
-
+			cd "${CMAKE_BUILD_DIR}"/doc
+			mv html doxygen
+			dohtml -r doxygen || die
 		)
+		mv "${D}"/usr/share/doc/${PN}/luadoc "${D}"/usr/share/doc/${PF}/html/luadoc || die
 	fi
 	rm -rf "${D}"/usr/share/doc/${PN} || die
 
